Updated about us section

--- a/RoadSense/Components/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense/Components/Pages/LandingPage/LandingPage.razor
@@ -62,7 +62,7 @@
                 <div class="col-md-6">
                     <div class="subheading">About Us</div>
 
-                    <h2>Our Qualified Team is Ready to Accomodate You!</h2>
+                    <h2>Road sense is for detecting !</h2>
                     <p>
                         We are a team of dedicated professionals providing top-quality
                         healthcare services. Our commitment is to ensure every patient
