Added Interactive Render Mode

--- a/RoadSense/Components/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense/Components/Pages/LandingPage/LandingPage.razor
@@ -14,7 +14,7 @@
                 <ul class="links">
                     <li class="text-light">About Us</li>
                     <li class="text-light">Services</li>
-                    <li class="text-light">Login</li>
+                    <li class="text-light" @onclick="@OpenDialogAsync">Login</li>
                     <li class="book">Sign Up</li>
                     
                     <MudBadge Content="100" Color="Color.Success" Overlap="true" Bordered="true">
