--- a/RoadSense/Components/Pages/Dialogs/LoginDialog.razor
+++ b/RoadSense/Components/Pages/Dialogs/LoginDialog.razor
@@ -1,21 +1,88 @@
-﻿<MudDialog>
+﻿@using System.ComponentModel.DataAnnotations
+@using RoadSense.Components.Pages.Common.Models
+@inject IDialogService DialogService
+
+<MudDialog>
     <TitleContent>
-        Dialog Title
+        <div class="d-flex justify-content-center mt-3">
+            <h4>@MudDialog.Title</h4>
+        </div>
     </TitleContent>
     <DialogContent>
-        Dialog Content
+        <EditForm Model="@User" OnValidSubmit="OnValidSubmit">
+            <DataAnnotationsValidator />
+            <MudGrid>
+                <MudItem xs="12" sm="12">
+                    <MudCard Elevation="0" Style="width: 400px">
+                        <MudCardContent>
+                            @{
+                                if (MudDialog.Title == "LOGIN")
+                                {
+                                    <MudTextField Label="Username" HelperText="Enter username"
+                                    @bind-Value="User.UserName" For="@(() => User.UserName)" />
+                                    <MudTextField Label="Password" HelperText="Enter password" Class="mt-3"
+                                    @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
+                                }
+                                else
+                                {
+                                    <MudTextField Label="Username" HelperText="Max. 8 characters"
+                                    @bind-Value="User.UserName" For="@(() => User.UserName)" />
+                                    <MudTextField Label="Email" Class="mt-3"
+                                    @bind-Value="User.Email" For="@(() => User.Email)" />
+                                    <MudTextField Label="Password" HelperText="Choose a strong password" Class="mt-3"
+                                    @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
+                                }
+                            }
+
+                        </MudCardContent>
+                        <MudCardActions>
+                            @{
+                                if (MudDialog.Title == "LOGIN")
+                                {
+
+                                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto">Login</MudButton>
+                                }
+                                else
+                                {
+                                    <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(() => BackToLogin("LOGIN"))">I have account already</MudButton>
+                                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" Class="ml-auto">Register</MudButton>
+                                }
+                            }
+                        </MudCardActions>
+                    </MudCard>
+                </MudItem>
+            </MudGrid>
+        </EditForm>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
     </DialogActions>
 </MudDialog>
 
 @code {
+    protected UserLogin User = new UserLogin();
+
+    protected bool IsSuccess = false;
+
+
+    private void OnValidSubmit(EditContext context)
+    {
+        IsSuccess = true;
+        StateHasChanged();
+    }
+
     [CascadingParameter]
     private IMudDialogInstance MudDialog { get; set; }
 
     private void Submit() => MudDialog.Close(DialogResult.Ok(true));
 
     private void Cancel() => MudDialog.Cancel();
+
+
+    private Task BackToLogin(string title)
+    {
+        this.MudDialog.Close();
+        var options = new DialogOptions { CloseOnEscapeKey = true };
+
+        return DialogService.ShowAsync<LoginDialog>(title, options);
+    }
 }
