--- a/RoadSense.UI/Pages/Dialogs/LoginDialog.razor
+++ b/RoadSense.UI/Pages/Dialogs/LoginDialog.razor
@@ -13,59 +13,61 @@
         </div>
     </TitleContent>
     <DialogContent>
-        <EditForm Model="@User" OnValidSubmit="OnValidSubmit">
-            <DataAnnotationsValidator />
-            <MudGrid>
-                <MudItem xs="12" sm="12">
-                    <MudCard Elevation="0" Style="width: 400px">
-                        <MudCardContent>
-                            @{
-                                if (MudDialog.Title == "LOGIN")
-                                {
-                                    <MudTextField Label="Username" HelperText="Enter username"
-                                    @bind-Value="User.UserName" For="@(() => User.UserName)" />
-                                    <MudTextField Label="Password" HelperText="Enter password" Class="mt-3"
-                                    @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
+        <EditForm Model="User" OnValidSubmit="OnValidSubmit">
+            <MudForm Model="@User" @bind-IsValid="@IsSuccess" @ref="Form" @bind-Errors="@errors">
+                <DataAnnotationsValidator />
+                <MudGrid>
+                    <MudItem xs="12" sm="12">
+                        <MudCard Elevation="0" Style="width: 400px">
+                            <MudCardContent>
+                                @{
+                                    if (MudDialog.Title == "LOGIN")
+                                    {
+                                        <MudTextField Label="Username" HelperText="Enter username"
+                                                      @bind-Value="User.UserName" For="@(() => User.UserName)" />
+                                        <MudTextField Label="Password" HelperText="Enter password" Class="mt-3"
+                                                      @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
+                                    }
+                                    else
+                                    {
+                                        <MudTextField Label="Username" HelperText="Max. 8 characters"
+                                                      @bind-Value="User.UserName" For="@(() => User.UserName)" />
+                                        <MudTextField Label="Email" Class="mt-3"
+                                                      @bind-Value="User.Email" For="@(() => User.Email)" />
+                                        <MudTextField Label="Password" HelperText="Choose a strong password" Class="mt-3"
+                                                      @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
+                                    }
                                 }
-                                else
-                                {
-                                    <MudTextField Label="Username" HelperText="Max. 8 characters"
-                                    @bind-Value="User.UserName" For="@(() => User.UserName)" />
-                                    <MudTextField Label="Email" Class="mt-3"
-                                    @bind-Value="User.Email" For="@(() => User.Email)" />
-                                    <MudTextField Label="Password" HelperText="Choose a strong password" Class="mt-3"
-                                    @bind-Value="User.Password" For="@(() => User.Password)" InputType="InputType.Password" />
-                                }
-                            }
 
-                        </MudCardContent>
-                        <MudCardActions>
-                            @{
-                                if (MudDialog.Title == "LOGIN")
-                                {
-                                    <MudSpacer />
-                                    <MudButton Disabled="@IsLogin" OnClick="@(() => Login(User.UserName,  User.Password))" Variant="Variant.Filled" Color="Color.Primary">
-                                        @if (IsLogin)
-                                        {
-                                            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
-                                            <MudText Class="ms-2">Processing</MudText>
-                                        }
-                                        else
-                                        {
-                                            <MudText>Login</MudText>
-                                        }
-                                    </MudButton>
+                            </MudCardContent>
+                            <MudCardActions>
+                                @{
+                                    if (MudDialog.Title == "LOGIN")
+                                    {
+                                        <MudSpacer />
+                                        <MudButton Disabled="@IsLogin" OnClick="@(() => Login(User.UserName,  User.Password))" Variant="Variant.Filled" Color="Color.Primary">
+                                            @if (IsLogin)
+                                            {
+                                                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+                                                <MudText Class="ms-2">Processing</MudText>
+                                            }
+                                            else
+                                            {
+                                                <MudText>Login</MudText>
+                                            }
+                                        </MudButton>
+                                    }
+                                    else
+                                    {
+                                        <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(() => BackToLogin("LOGIN"))">I have account already</MudButton>
+                                        <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" Class="ml-auto">Register</MudButton>
+                                    }
                                 }
-                                else
-                                {
-                                    <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(() => BackToLogin("LOGIN"))">I have account already</MudButton>
-                                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" Class="ml-auto">Register</MudButton>
-                                }
-                            }
-                        </MudCardActions>
-                    </MudCard>
-                </MudItem>
-            </MudGrid>
+                            </MudCardActions>
+                        </MudCard>
+                    </MudItem>
+                </MudGrid>
+            </MudForm>
         </EditForm>
     </DialogContent>
     <DialogActions>
@@ -73,11 +75,14 @@
 </MudDialog>
 
 @code {
-    protected UserLogin User = new UserLogin();
+    protected UserLogin User = new UserLogin(); 
+    [Inject] NavigationManager NavManager { get; set; }
+    private MudForm Form = new();
 
     protected bool IsSuccess = false;
 
     private bool IsLogin = false;
+    private string[] errors = { };
 
     private void OnValidSubmit(EditContext context)
     {
@@ -101,17 +106,30 @@
         return DialogService.ShowAsync<LoginDialog>(title, options);
     }
 
-    private async Task Login(string username, string password){
+    private async Task Login(string username, string password)
+    {
+
+        await Form.Validate();
+
+        if (!IsSuccess)
+            return;
 
         IsLogin = true;
 
         var result = await UserService.LoginAsync(username, password);
-
-        if(result.IsSuccessStatusCode){
-            Snackbar.Add("Login successful!", Severity.Success);
-        }else{
-            Snackbar.Add("Login failed!", Severity.Error);
+        try
+        {
+            if (result.IsSuccessStatusCode)
+            {
+                Snackbar.Add("Login successful!", Severity.Success);
+                NavManager.NavigateTo("/dashboard", forceLoad: true);
+            }
         }
+        catch (Exception ex)
+        {
+            Snackbar.Add($"{ex.Message}", Severity.Error);
+        }
+         
 
         IsLogin = false;
 
