--- a/RoadSense.UI/Pages/RedirectPages/RedirectToDashboard.razor
+++ b/RoadSense.UI/Pages/RedirectPages/RedirectToDashboard.razor
@@ -3,6 +3,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavManager.NavigateTo("/dashboard", forceLoad: true);
+        NavManager.NavigateTo("/dashboard");
     }
 }
