--- a/RoadSense.UI/_Imports.razor
+++ b/RoadSense.UI/_Imports.razor
@@ -10,3 +10,4 @@
 @using RoadSense.UI.Layout
 @using MudBlazor
 @using Microsoft.AspNetCore.Components.Authorization
+@using RoadSense.UI.Pages.RedirectPages
