--- a/RoadSense.UI/Pages/RedirectPages/404.razor
+++ b/RoadSense.UI/Pages/RedirectPages/404.razor
@@ -3,10 +3,10 @@
 <div class="d-flex justify-content-center mt-6">
     <div class="row">
         <div class="col-12 text-center">
-            <h3 style="font-size: 100px;">401</h3>
+            <h3 style="font-size: 100px;">404</h3>
         </div>
         <div class="col-12 text-center">
-            <h3>You are authorized to access this page.</h3>
+            <h3>You are not logged in.</h3>
         </div>
         <div class="col-12 text-center">
             <h3>Back to <a href="/" class="text-primary">Dashboard</a></h3>
