--- a/RoadSense.UI/Pages/Dialogs/LoginDialog.razor
+++ b/RoadSense.UI/Pages/Dialogs/LoginDialog.razor
@@ -30,7 +30,8 @@
                                     }
                                     else
                                     {
-                                        <MudTextField Label="Username" HelperText="Max. 8 characters"
+                                        
+                                        <MudTextField Label="Username" HelperText="Enter username"
                                         @bind-Value="User.UserName" For="@(() => User.UserName)" />
                                         <MudTextField Label="Email" Class="mt-3"
                                         @bind-Value="User.Email" For="@(() => User.Email)" />
