--- a/RoadSense.UI/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense.UI/Pages/LandingPage/LandingPage.razor
@@ -64,7 +64,7 @@
                 <div class="col-md-6">
                     <div class="subheading">About Us</div>
 
-                    <h2>Road sense is for detecting !</h2>
+                    <h2>Road sense is for detecting !ksksksksk</h2>
                     <p>
                         We are a team of dedicated professionals providing top-quality
                         healthcare services. Our commitment is to ensure every patient
