Update bug on registering user with log async bug ifx

--- a/RoadSense.UI/Layout/MainLayout.razor
+++ b/RoadSense.UI/Layout/MainLayout.razor
@@ -107,5 +107,9 @@
     {
         var authState = await AuthStateTask;
         user = authState.User;
+
+        if(user.Identity.IsAuthenticated){
+            NavManager.NavigateTo("/dashboard");
+        }
     }
 }
