Added Footer Section

--- a/RoadSense.UI/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense.UI/Pages/LandingPage/LandingPage.razor
@@ -105,7 +105,16 @@
             </MudGrid>
         </div>
     </section>
- 
+  
+    <section class="all-rights">
+        <div class="container">
+            <div class="d-flex justify-content-center">
+                <p class="footer-menu-item">
+                    Road Sense © Copyright | Designed & Developed by Angel Mae Lagare
+                </p>
+            </div>
+        </div>
+    </section>
 
 </div>
 
